@@ -55,6 +55,7 @@ test {
             '--add-opens=java.base/java.util.stream=ALL-UNNAMED',
             '--add-opens=java.base/java.util=ALL-UNNAMED',
             '--add-opens=java.base/java.nio=ALL-UNNAMED',
+            '--add-opens=java.base/java.time=ALL-UNNAMED',
             '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED',
             '--add-opens=java.base/java.io=ALL-UNNAMED',
             '--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED',
